<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Avalon</string>
    <string name="action_settings">Settings</string>
    <string name="action_credits">Credits</string>
    <string name="settings">Settings</string>
    <string name="voice_title">Choose a Voice</string>
    <string name="male_voice">male</string>
    <string name="female_voice">female</string>
    <string name="merlin">Merlin</string>
    <string name="morganna">Morganna</string>
    <string name="percival">Percival</string>
    <string name="lancelot">Lancelot #3</string>
    <string name="guinevere">Guinevere</string>
    <string name="galahad">Galahad</string>
    <string name="bedivere">Bedivere</string>
    <string name="mordred">Mordred</string>
    <string name="oberon">Oberon</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="bedivere_include">Bedivere may only be included with the \"Excalibur\" variant.</string>
    <string name="bedivere_rules">When selected for a mission, if Bedivere is not given Excalibur, Bedivere MUST throw a Failure card, if he is given Excalibur he may act normally.
        Bedivere is otherwise a loyal servant.</string>
    <string name="bedivere_advantage">Bedivere is an advantage to the minions of Mordred</string>
    <string name="lancelot_rules">Some Rules for lancelot</string>
    <string name="guinevere_include">Guinevere may only be included with the \"Lancelot\" variants #1 and #2.</string>
    <string name="guinevere_rules">Guinevere learns the identity of both Lancelots during the reveal phase, Guinevere is otherwise a loyal servant of Arthur.</string>
    <string name="guinevere_advantage">Guinevere is an advantage to the Loyal servants.</string>
    <string name="galahad_include">Galahad may only be included with the \"Lady of the Lake\"" variant.</string>
    <string name="galahad_rules">When the loyal Galahad is forced to reveal his loyalty card to the Lady of the Lake, he must select the card that indicates he is a minion of Mordred.</string>
    <string name="galahad_advantage">Galahad is an advantage to the minions of Mordred.</string>
    <string name="ok">Okay</string>
    <string name="credits_title">Credits</string>
    <string name="avalon_credit">The Resistance: Avalon can be purchased from <a href="http://www.indieboardsandcards.com/RESAvalon.php">Indie Games and Cards.</a></string>
    <string name="new_roles_credits">Credit to <a href="http://reddit.com/r/boardgames">r/BoardGames</a> and <a href=">http://www.boardgamegeek.com">Board Game Geek</a> for the additional roles of Bedivere and Guinevere.</string>

</resources>